created header home

--- a/public/index.html
+++ b/public/index.html
@@ -17,6 +17,10 @@
       * {
         font-family: 'Roboto Condensed', sans-serif;
       }
+
+      body {
+        margin: 0;
+      }
     </style>
     <!--
       manifest.json provides metadata used when your web app is installed on a
