created static footer

--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,12 @@
     <style>
       * {
         font-family: 'Roboto Condensed', sans-serif;
+        -ms-overflow-style: none;  /* Internet Explorer 10+ */
+        scrollbar-width: none;  /* Firefox */
+      }
+
+      ::-webkit-scrollbar {
+        display: none;
       }
 
       body {
